nav name change & font color in body

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="top">
       <nav>
-        <a href="index.html">Strona główna</a>
+        <a href="index.html">Strona główna Filipa JOŁ JołS</a>
         <a href="podstrona-probna.html">Podstrona</a>
       </nav>
     </header>
