--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <header id="top">
       <nav>
-        <a href="index.html">Strona główna Filipa JOŁ JołS</a>
+        <a href="index.html">Strona główna Filipa </a>
         <a href="podstrona-probna.html">Podstrona</a>
       </nav>
     </header>
 
     <main>
       <header>
-        <h1>
+        <h1 class="main-heading main-heading--js">
           Maciek Korsan 
           > Strona domowa
         </h1>
@@ -33,6 +33,9 @@
             Przejdź do notatek</a
           >
         </p>
+      </section>
+      <section>
+        <h2 class="empty-box--js"></h2>
       </section>
       <section id="notatki">
         <h2>Notatki z WTF: Co ten frontend</h2>
@@ -54,7 +57,7 @@
             pomocy bliskich udało mi się ukończyć szkolenie i tak jestem tu
             teraz z wami.
           </p>
-          <img src="ja.jpg" alt="Filipek" />
+          <img src="/ja.jpg" alt="Filipek" />
         </article>
       </section>
       <section>
