--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
   </head>
 
   <body>
-    <header id="top">
-      <nav>
-        <a href="index.html">Strona główna Filipa </a>
-        <a href="podstrona-probna.html">Podstrona</a>
+    <header class="header">
+      <nav class="navigation">
+        <a class="navigation__link navigation__link--homepage" href="index.html">Strona główna</a>
+        <a class="navigation__link" href="podstrona-probna.html">Podstrona</a>
       </nav>
     </header>
 
-    <main>
-      <header>
+    <main id="main">
+      <header id="top">
         <h1 class="main-heading main-heading--js">
-          Maciek Korsan 
-          > Strona domowa
+          Maciek Korsan - Strona domowa
         </h1>
       </header>
 
-      <section>
-        <h2>Kim jestem?</h2>
-        <p>
+      <section >
+        <h2 class="secondary-heading">Kim jestem?</h2>
+        <p class="week-sumary__description">
           Hej! Na co dzień uczę wspaniałych ludzi tajnej sztuki frontendu i
           pracuję w firmie o ciężko zapisywalnej nazwie EYEDA.<a
             href="#notatki"
@@ -37,11 +36,11 @@
       <section>
         <h2 class="empty-box--js"></h2>
       </section>
-      <section id="notatki">
-        <h2>Notatki z WTF: Co ten frontend</h2>
-        <article>
-          <h3>Jak stworzyć prawidłowego HTML-a?</h3>
-          <p>
+      <section >
+        <h2 class="secondary-heading">Notatki z WTF: Co ten frontend</h2>
+        <article class="week-summary">
+          <h3 class="week-summary__title">Jak stworzyć prawidłowego HTML-a?</h3>
+          <p class="week-summary__description">
             Tworzenie zgodnego ze standardami HTML-a to sztuka, którą do
             perfekcji opanowało niewielu. Jeśli chcesz stać się częścią tej
             grupy, musisz wykazać się otwartą głową i dużą ilością wolnego
@@ -49,30 +48,30 @@
           </p>
         </article>
 
-        <article>
-          <h3>Czy nagrywanie szkolenia to prosta sprawa?</h3>
-          <p>
+        <article class="week-summary">
+          <h3 class="week-summary__title">Czy nagrywanie szkolenia to prosta sprawa?</h3>
+          <p class="week-summary__description">
             Na początku myślałem, że całe szkolenie nagrywam w 2 tygodnie. Samo
             planowanie rzeczy zajęło dużo więcej czasu. Na szczęście dzięki
             pomocy bliskich udało mi się ukończyć szkolenie i tak jestem tu
             teraz z wami.
           </p>
-          <img src="/ja.jpg" alt="Filipek" />
+          
         </article>
       </section>
-      <section>
-        <h2>Co ja tu robię ???</h2>
-        <article>
-          <h3>Czemu kupiłem to szkolenie?</h3>
-          <p>
+      <section >
+        <h2 class="secondary-heading">Co ja tu robię ???</h2>
+        <article class="week-summary">
+          <h3 class="week-summary__title">Czemu kupiłem to szkolenie?</h3>
+          <p class="week-summary__description">
             Jestem tu gdyż pragnę nauczyć się tworzyć strony internetowe w
             HTML-u, chcę iść na studia informatyczne i rozwijać się w kierunku
             cyfrowym i poznawać nowe rzeczy
           </p>
         </article>
-        <article>
-          <h3>Co jadłem dzisiaj w niedzielę na obiad?</h3>
-          <p>
+        <article class="week-summary">
+          <h3 class="week-summary__title">Co jadłem dzisiaj w niedzielę na obiad?</h3>
+          <p class="week-summary__description">
             Dzisiaj na obiad miałem schabowego z ziemniakami a jako popitka
             służyła mi mizeria zrobiona z maślanki, ogórków oraz pieprzu. Był to
             tradycyjny niedzielny obiad, który towarzyszy nam najczęściej w
@@ -81,6 +80,7 @@
           </p>
         </article>
       </section>
+      <img src="/ja.jpg" alt="Filipek" />
     </main>
     <footer>
       Strona domowa Maćka Korsana, wszystkie treści są efektem tworzenia
