--- a/podstrona-probna.html
+++ b/podstrona-probna.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header>
+    <header id="top">
         <nav>
             <a href="index.html">Strona główna</a>
             <a href="podstrona-probna.html">Podstrona</a>
